@@ -1,3 +1,4 @@
+* Support digits from relation field
 * Allow PYSON Expression as key for PYSON In with dict object
 * Support Binary field in CSV import/export
 
